<resources>
    <string name="app_name">AndroidClient</string>
    <string name="ip_address_entry">Ip Address</string>
    <string name="ip_address_update">Update IP</string>
    <string name="port_number_entry">Port Number</string>
    <string name="port_number_update">Update Port</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="quit_button">Quit</string>
    <string name="startup_message">Connect to a server to begin.</string>
    <string name="led1">LED1</string>
    <string name="led2">LED2</string>
    <string name="led3">LED3</string>
    <string name="led4">LED4</string>
    <string name="temp">Temp</string>
    <string name="gpb1">GPB1</string>
    <string name="gpb2">GPB2</string>
    <string name="gpb3">GPB3</string>
</resources>
