<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidclient.MainActivity">

    <EditText
        android:id="@+id/ipAddressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateIPButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ip_address_update"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/portNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressField" />

    <Button
        android:id="@+id/updatePortButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/port_number_update"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/portNumberField"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/connect_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/disconnectButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portNumberField" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/disconnect_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/quitButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/connectButton"
        app:layout_constraintTop_toBottomOf="@+id/portNumberField" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/quit_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disconnectButton"
        app:layout_constraintTop_toBottomOf="@+id/updatePortButton" />

    <TextView
        android:id="@+id/messageTextArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/startup_message"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectButton" />

    <ToggleButton
        android:id="@+id/led1ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tempButton"
        app:layout_constraintStart_toEndOf="@+id/tempButton" />

    <ToggleButton
        android:id="@+id/led2ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/led3ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/gpb1Button"
        app:layout_constraintTop_toBottomOf="@+id/led1ToggleButton" />

    <ToggleButton
        android:id="@+id/led3ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/led4ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/gpb2Button"
        app:layout_constraintTop_toBottomOf="@+id/led2ToggleButton" />

    <ToggleButton
        android:id="@+id/led4ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gpb3Button"
        app:layout_constraintTop_toBottomOf="@+id/led3ToggleButton" />

    <TextView
        android:id="@+id/led1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/led1"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/led1ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/led1ToggleButton" />

    <TextView
        android:id="@+id/led2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/led2"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/led2ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/led2ToggleButton" />

    <TextView
        android:id="@+id/led3Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/led3"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/led3ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/led3ToggleButton" />

    <TextView
        android:id="@+id/led4Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/led4"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/led4ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/led4ToggleButton" />

    <Button
        android:id="@+id/tempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/temp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/gpb1Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextArea" />

    <Button
        android:id="@+id/gpb1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gpb1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/gpb2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempButton" />

    <Button
        android:id="@+id/gpb2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gpb2"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/gpb3Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpb1Button" />

    <Button
        android:id="@+id/gpb3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gpb3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpb2Button" />

</android.support.constraint.ConstraintLayout>
